# wl-clipboard

./: .editorconfig  .gitignore  BUILDING.md  README.md  meson.build  meson_options.txt  shell.nix
completions/: meson.build
completions/bash/: meson.build  wl-copy  wl-paste
completions/fish/: meson.build  wl-copy.fish  wl-paste.fish
completions/zsh/: _wl-copy  _wl-paste  meson.build
data/: meson.build  wl-clipboard.1  wl-paste.1
src/: boilerplate.c  boilerplate.h  meson.build  wl-clipboard-x11.c  wl-copy.c  wl-paste.c
src/includes/: selection-protocols.h  shell-protocols.h
src/protocol/: gtk-shell.xml  meson.build  wlr-data-control-unstable-v1.xml
src/types/: buffer.c  buffer.h  copy-action.c  copy-action.h  copy-source-argv.c  copy-source-argv.h  copy-source-buffer.c  copy-source-buffer.h  copy-source-file.c  copy-source-file.h  copy-source-slice.c  copy-source-slice.h  copy-source.h  device-manager.c  device-manager.h  device.c  device.h  keyboard.c  keyboard.h  offer.c  offer.h  owned-slice.c  owned-slice.h  popup-surface.c  popup-surface.h  registry.c  registry.h  seat.c  seat.h  sensitive-section.c  sensitive-section.h  shell-surface.c  shell-surface.h  shell.c  shell.h  source.c  source.h
src/util/: files.c  files.h  misc.c  misc.h  string.c  string.h
subprojects/: libffi.wrap  wayland-protocols.wrap  wayland.wrap
